2011-06-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCcse.c(cseBBlock): fixed cse bug 2729218 reading pointer for result
	* src/SDCCdflow.c: cosmetics
	* src/SDCCicode.c(operandOperation): fixed fatal error for literal pointer
	* src/SDCCmain.c(linkEdit): only use -M for mcs51 and ds390
	* src/SDCCopt.c: fixed warnings
	* src/SDCCval.c(floatFromVal, ulFromVal): handle structs
	* support/regression/tests/bug2729218.c: new, added

2011-06-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCsymt.h,
	  src/SDCCopt.c:
	  Add __optlink to allow passing arguments in reverse order.

2011-06-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c,
	  src/SDCCglue.c,
	  src/SDCCglobl.h:
	  Add --no-sdccopt-in-asm option, since the .optsdcc directive confuses some assemblers.

2011-05-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c: changed snprintf to SNPRINTF,
	  implemented --fomit-frame-pointer for --xstack
	* src/SDCCmem.c(printAllocInfoSeg): print stack/xstack offsets

2011-05-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/bug3299577.c:
	  Fixed bug #3299577.

2011-05-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* debugger/mcs51/simi.c: added #include <sys/file.h> for Solaris

2011-05-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/abs.c: optimized
	* src/mcs51/gen.c: replaced strcmp with EQ,
	  implemented --fomit-frame-pointer (except for --xstack),
	  added freeForBranchAsmops & swapOperands
	* src/mcs51/main.c(_mcs51_finaliseOptions): --fomit-frame-pointer
	* src/mcs51/peep.c(scan4op): detect sp manipulations
	* src/SDCCmem.c(printAllocInfoSeg): print stack base
	* support/regression/fwk/lib/spec.mk: cosmetic
	* support/regression/tests/interrupt.c: new, added
	* .version: bumped to 3.0.3

2011-05-20 Borut Razem <borut.razem AT gmail.com>

	* debugger/mcs51/simi.c: