@@ -1,3 +1,11 @@
+2011-06-09 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCC.lex,
+	  src/SDCC.y,
+	  src/SDCCsymt.h,
+	  src/SDCCopt.c:
+	  Rename __optlink to __smallc.
+
 2011-06-09 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/SDCCcse.c(cseBBlock): fixed cse bug 2729218 reading pointer for result
